wk_taa_taaqa/src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Data_Current_as_of_Date__c</fullName>
        <inlineHelpText>The date for which the data is current as of. For example, if the report contains YTD information as of the end of June, enter 6/30.</inlineHelpText>
        <label>Data Current as of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description2__c</fullName>
        <formula>Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Owner_Contact__c</fullName>
        <label>Report Owner/Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Frequency__c</fullName>
        <label>Update Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Ad-Hoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>